<resources>
    <string name="app_name">Card Game Quiz</string>
    <string name="score_text">Score</string>
    <string name="zero">0</string>
    <string name="question_one_placeholder">What color is the average person eyes?"</string>
    <string name="choice_one_placeholder">Yellow</string>
    <string name="choice_two_placeholder">Brown</string>
    <string name="choice_three_placeholder">Blue</string>
    <string name="choice_four_placeholder">Red</string>
    <string name="correct">correct</string>
    <string name="incorrect">incorrect</string>
    <string name="quiz_rules">Quiz Rules</string>
    <string name="quiz_description">The rules are simple.
        Answer the questions to the best of your ability and
        you will be rewarded one point for correct answers and
        zero points for incorrect answers</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to Card Game Quiz</string>
</resources>
